--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "build:ui": "rm -rf build && cd ../fullstack/part2/phonebook && npm run build --prod &&  cd ../../../part3 && cp -R ../fullstack/part2/phonebook/build .",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.13",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.12.1",
     "nodemon": "^2.0.6"
   }
 }
